--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <h1 class="text-uppercase"><strong> The Biggest Startup Event of the Year </strong></h1>
         </header>
         <section class="text-center col-12">
-          <div class="buffer col-12 "></div>
+          <div class="buffer col-12"></div>
           <hr>
-          <button class="btn btn-primary btn-xl"> find out more </button> 
+            <a href="https://oelnaro.github.io/animals/" class="btn btn-primary btn-xl"> find out more </a> 
         </section>
       </div>
     </div>
